<resources>
    <string name="app_name">Mobilt_java24_Alexander_Jansson_LifeCycle_v4(</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="calendar_button">calendar_button</string>
    <string name="Register">Register\n</string>
    <string name="Home">Home</string>
    <string name="Schedule">Schedule</string>
    <string name="Profile">Profile\n</string>
    <string name="image_of_abstract_shapes">Image of abstract shapes</string>
    <string name="change">Change</string>
    <string name="can_work">Can work</string>
    <string name="my_schedule">My Schedule</string>
    <string name="edit_profile">Edit profile</string>
    <string name="see_team">See team</string>
    <string name="Logout">Logout</string>
    <string name="schedule">Schedule</string>
    <string name="tasks">Tasks</string>
</resources>