<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <EditText
            android:id="@+id/username_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"/>

    <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="16dp"
            android:layout_marginBottom="16dp"/>

    <Button
            android:id="@+id/login_button"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />


</LinearLayout>